# data-cleaning-openenv

./: -w  .env.example  .gitignore  .graphifyignore  CORS_FIX.md  DEPLOY_CHECKLIST.md  Dockerfile  FRONTEND_TEST.md  HF_SPACES_SYNC.md  PHASE_3_1_COMPLETION.md  PHASE_3_1_FIXED_VERIFICATION.md  PRE_SUBMISSION_CHECKLIST.md  PROJECT_COMPLETE_GUIDE.md  README.md  SETUP_API_KEY.md  data_cleaning.db  docker-compose.new.yml  docker-compose.prod.yml  docker-compose.yml  inference.py  package-lock.json  package.json  pyproject.toml  render.yaml  test_env.py  test_inference_format.py  train_output.txt  verify_frontend.js
backend/: .dockerignore  Dockerfile  app.py  config.py  database.py  entrypoint.sh  requirements.txt  worker.py
data/: synthetic_datasets.py
docs/: DEPLOYMENT.md  DEPLOYMENT_FREE_ALTERNATIVE.md  ML_IMPROVEMENTS.md
frontend/: .dockerignore  .env.example  Dockerfile  build_output.txt  nginx.conf  package-lock.json  package.json
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
infra/: prometheus.yml
models/: dqn_easy_v1.0_epochs1000_reward1.025.pt  dqn_easy_v1.0_epochs1000_reward1.025_metrics.json  dqn_easy_v1.0_epochs2_reward0.000.pt  dqn_easy_v1.0_epochs2_reward0.000_metrics.json  dqn_easy_v1.0_epochs3_reward0.000.pt  dqn_easy_v1.0_epochs3_reward0.000_metrics.json
notebooks/: model_comparison.ipynb
redis/: Dockerfile  redis.conf
reports/: dqn_training_report_easy_20260415_101821.json  dqn_training_report_easy_20260415_101824.json  dqn_training_report_easy_20260415_101939.json  dqn_training_report_easy_20260415_105104.json  (+1 more)
server/: app.py  (+1 more)
(+68 files in other folders)
